render navbar under no view_as in prod

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -63,11 +63,8 @@
     </div>
 
   </div>
-    <!-- TODO Here is where we render role specific nav bar -->
-    <% if session[:role] == "admin" and (session[:view_as] == 0 or session[:view_as] == Role.where(RoleName: "admin").first.idRoles) %>
-      <%= render :partial => "admin_navbar" %>
 
-    <% elsif session[:role] == "advisor" or session[:view_as] == Role.where(RoleName: "advisor").first.idRoles %>
+    <% if session[:role] == "advisor" or session[:view_as] == Role.where(RoleName: "advisor").first.idRoles %>
       <%= render :partial => "advisor_navbar" %>
 
     <% elsif session[:role] == "staff" or session[:view_as] == Role.where(RoleName: "staff").first.idRoles %>
@@ -75,6 +72,9 @@
 
     <% elsif session[:role] == "student labor" or session[:view_as] == Role.where(RoleName: "student labor").first.idRoles %>
       <%= render :partial => "stu_labor_navbar" %>
+
+		<% elsif session[:role] == "admin" %>
+			<%= render :partial => "admin_navbar" %>
 
     <% end %>
 </div>
