add cell boarder to datatable

--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -35,7 +35,7 @@
   <div class="student reports index">
     <h2>Student Information:</h2>
 
-    <table class="small" id="report" class="table table-striped" summary="Student Reports">
+    <table class="cell-border" id="report" summary="Student Reports">
     </div>
     <thead>
       <tr class="header">
