--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -10,11 +10,13 @@
 <div class="container-fluid">
   <!-- dropdown here  -->
 
+  <!-- mapping of column name with attribute name in hash -->
   <% header_mappings = [
     ["B#", :Bnum],
     ["Name", :name_readable],
     ["Prog Status", :prog_status],
     ["Enrollment Status", :EnrollmentStatus],
+    ["Classification", :Classification],
     ["Program(s)", :ProgName],
     ["Major 1", :CurrentMajor1],
     ["Conc 1", :concentration1],
