--- a/app/views/pgps/new.html.erb
+++ b/app/views/pgps/new.html.erb
@@ -6,30 +6,11 @@
 
 
   <%= form_for(:pgp, :url => student_pgps_path(@student.id) ) do |f| %>
-	<h2>Create new professional growth plan for <%=[@first_name, @last_name].join(' ')%></h2>
+	<h2>Create new professional growth plan for <%=@student.name_readable%></h2>
   	<%= error_messages_for(@pgp) %>
 
 	<table summary="PGPs form fields">
-      <tr>
-          <td><%= f.hidden_field(:student_id, :value => @student.id) %></td>
-      </tr>
-	  <tr>
-	    <th><%= f.label(:goal_name, "Goal") %></th>
-	    <td><%= f.text_area(:goal_name) %></td>
-	  </tr>
-
-	  <tr>
-	    <th><%= f.label(:description, "Description") %></th>
-	    <td> <%= f.text_area(:description, :size => '30x10') %> </td>
-	  </tr>
-	  
-	  <tr>
-	      <th><%= f.label(:plan, "Action Plan") %></th>
-	      <td><%= f.text_area(:plan, :size => '30x10') %></td>
-	  </tr>
-
-  	<tr>
-	<th></th>
+    <%= render(partial: 'form', locals: {f: f}) %>
 	<td>
     <div class="form-buttons">
       <%= submit_tag("Create PGP") %>
@@ -37,7 +18,7 @@
 
 	</td>
 	</tr>
-    </div>	
+    </div>
 	</table>
 
 
