--- a/app/views/pgps/show.html.erb
+++ b/app/views/pgps/show.html.erb
@@ -20,8 +20,13 @@
   </tr>
   
   <tr>
-    <th> Action Plan:</th>
+    <th>Action Plan:</th>
     <td class="wrap"><%= @pgp.plan %></td>
+  </tr>
+  
+  <tr>
+    <th>Strategies:</th>
+    <td class="wrap"><%= @pgp.strategies %></td>
   </tr>
 
 </table></br>
