Changed strategies to long title instead on pgp show

--- a/app/views/pgps/show.html.erb
+++ b/app/views/pgps/show.html.erb
@@ -25,7 +25,7 @@
   </tr>
   
   <tr>
-    <th>Strategies:</th>
+    <th>Strategies including timeline and resources:</th>
     <td class="wrap"><%= @pgp.strategies %></td>
   </tr>
 
