Consistency in capitalization and button formatting changes to issue updates

--- a/app/views/issue_updates/new.html.erb
+++ b/app/views/issue_updates/new.html.erb
@@ -15,18 +15,18 @@
 	<table summary="Issue form fields">
 
       <tr>
-        <th><%= update_form.label(:UpdateName, "Update Name") %> </th>
+        <th><%= update_form.label(:UpdateName, "Update Name:") %> </th>
         <td><%= update_form.text_field(:UpdateName) %></td>
       </tr>
 
 	  <tr>
-	    <th><%= update_form.label(:Description, "Description") %></th>
+	    <th><%= update_form.label(:Description, "Description:") %></th>
 	    <td> <%= update_form.text_area(:Description, :size => '30x10') %> </td>
 	  </tr>
 
     <tr>
       <th>
-        <%= update_form.label(:status, "Status of Update") %>
+        <%= update_form.label(:status, "Status of Update:") %>
       </th>
       <td> <%= update_form.select(:status, IssueUpdate::STATUSES.keys,
       {prompt: "Select a status"}) %></td>
