--- a/app/views/pgp_scores/_form.html.erb
+++ b/app/views/pgp_scores/_form.html.erb
@@ -1,4 +1,4 @@
-  	<h2><%= "Edit professional growth plan score for #{@student.name_readable}" %></h2>
+  	<h2><%= "Edit Professional Growth Plan Score for #{@student.name_readable}" %></h2>
         <%= error_messages_for(@pgp_score) %> 
     
      <table summary="pgp scoring form">
@@ -20,8 +20,8 @@
             </tr>
             
         </div>
-        </table><br>
-        
+        </table>
+
         <table>
         <div>
             <tr>
