--- a/app/views/pgp_scores/edit.html.erb
+++ b/app/views/pgp_scores/edit.html.erb
@@ -6,10 +6,9 @@
         
 	<%= render(partial: 'form', locals: {f: f}) %>
 	
-	<div class="form-buttons">
-    	<tr>
-    	    <td> <%= submit_tag("Edit Professonal Growth Plan Score") %> </td>
-        </tr>
-	</div>
+    <br>
+    <br>
+    <td> <%= submit_tag("Update Professonal Growth Plan Score") %> </td>
+
 	
 <% end %>
