--- a/app/views/pgp_scores/index.html.erb
+++ b/app/views/pgp_scores/index.html.erb
@@ -9,9 +9,9 @@
         <table class="table table-striped">
           <div class="row">      
             <caption>
-              <div class="header1 col-xs-12">Professional growth plan scores for <%="#{@student.FirstName} #{@student.LastName}"%></div></br>
+              <div class="header1 col-xs-12">Professional Growth Plan Scores for <%="#{@student.FirstName} #{@student.LastName}"%></div></br>
 
-              <div class="header2 col-xs-12"> <%= pluralize(@pgp.pgp_scores.size, "PGP score") + " found" %> </div>
+              <div class="header2 col-xs-12"> <%= pluralize(@pgp.pgp_scores.size, "professional growth plan score") + " found" %> </div>
                 <div class="col-xs-1">
                 
                 </div>
