--- a/app/views/pgp_scores/new.html.erb
+++ b/app/views/pgp_scores/new.html.erb
@@ -9,7 +9,7 @@
     
      <table summary="pgp scoring form">
         <caption>
-        <div <div class="header1 col-xl-12"> <%= "PGP Scoring"  %> </div></br>
+            <div <div class="header1 col-xl-12"> <%= "Professional Growth Plan Scoring"  %> </div>
         </caption>
         
         <div>
@@ -29,35 +29,31 @@
                 <td><%= "#{@pgp.plan}"%></td>
             </tr>
         </div>
-        </table><br>
+        </table>
         <table>
-        <div>
-            <tr>
-                <th><%= f.label(:goal_score, "Score:")%></th>
-                <td><%= f.radio_button(:goal_score, 1) %>1</td>
-                <td><%= f.radio_button(:goal_score, 2) %>2</td>
-                <td><%= f.radio_button(:goal_score, 3) %>3</td>
-                <td><%= f.radio_button(:goal_score, 4) %>4</td>
-            </tr>
-        </div>
+            <div>
+                <tr>
+                    <th><%= f.label(:goal_score, "Score:")%></th>
+                    <td><%= f.radio_button(:goal_score, 1) %>1</td>
+                    <td><%= f.radio_button(:goal_score, 2) %>2</td>
+                    <td><%= f.radio_button(:goal_score, 3) %>3</td>
+                    <td><%= f.radio_button(:goal_score, 4) %>4</td>
+                </tr>
+            </div>
         </table>
         
         <table>
-        <div>
-            <tr>
-                <th><%= f.label(:score_reason, "Reason(s) for score: ")%></th>
-                <td><%= f.text_area(:score_reason) %></td>
-            </tr>
-        </div>
+            <div>
+                <tr>
+                    <th><%= f.label(:score_reason, "Reason(s) for score: ")%></th>
+                    <td><%= f.text_area(:score_reason) %></td>
+                </tr>
+            </div>
         </table>
-        
-        
-        <tr>
-            <td>
-                <div class="form-buttons">
-                    <%= submit_tag("Submit") %>
-                </div>
-            </td>   
-        </tr> 
+
+        <td>
+            <br>
+            <br><%= submit_tag("Submit Score") %>
+        </td>   
     </table>
     <% end %>
