--- a/app/views/pgps/_form.html.erb
+++ b/app/views/pgps/_form.html.erb
@@ -3,7 +3,7 @@
             <td><%= f.hidden_field(:student_id, :value => @student.id) %></td>
         </tr>
   	  <tr>
-  	    <th><%= f.label(:goal_name, "Goal name") %></th>
+  	    <th><%= f.label(:goal_name, "Goal Name") %></th>
   	    <td><%= f.text_field(:goal_name) %></td>
   	  </tr>
 
@@ -18,7 +18,7 @@
   	  </tr>
 
       <tr>
-  	      <th><%= f.label(:strategies, "Strategies including timeline and resources") %></th>
+  	      <th><%= f.label(:strategies, "Strategies Including Timeline and Resources") %></th>
   	      <td><%= f.text_area(:strategies, :size => '30x10') %></td>
   	  </tr>
 
