--- a/app/views/pgps/edit.html.erb
+++ b/app/views/pgps/edit.html.erb
@@ -2,7 +2,7 @@
   <i class=" link-text"> Back</i>
 <% end %>
 <%= form_for(@pgp, url: pgp_path(@pgp.id)) do |f| %>
-<h2>Edit professional growth plan for <%=@student.name_readable%></h2>
+<h2>Edit Professional Growth Plan for <%=@student.name_readable%></h2>
   <%= error_messages_for(@pgp) %>
 
     <table summary="Edit PGP form fields">
@@ -11,7 +11,7 @@
 
 	<div class="form-buttons">
     	<tr>
-    	    <td> <%= submit_tag("Edit Professonal Growth Plan") %> </td>
+    	    <td> <%= submit_tag("Update Professonal Growth Plan") %> </td>
         </tr>
 	</div>
 
