--- a/app/views/pgps/index.html.erb
+++ b/app/views/pgps/index.html.erb
@@ -8,7 +8,7 @@
     <table class="table table-striped">
       <div class="row">      
         <caption>
-          <div class="header1 col-xs-12">Professional growth plans for <%= name_details(@student)%></div></br>
+          <div class="header1 col-xs-12">Professional Growth Plans for <%= name_details(@student)%></div></br>
 
           <div class="header2 col-xs-12"> <%= pluralize(@student.pgps.size, "professional growth plan") + " found" %> </div>
             <div class="col-xs-1">
