--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,11 +25,9 @@
 
     <div class="row">    <!-- menu to swap psudo role if user is admin -->
       <div class="col-xs-12 col-md-3">
-				<% if session[:role] == 'admin' && Rails.env == "development" %>
+				<% if ["development", "test"].include? Rails.env %>
 
-	        <% unless session[:view_as] == 1 or session[:view_as] == 0 %>
 	          Viewing Site As:
-	        <% end %>
 
 	        <%= form_tag("/access/change_psudo_status") do -%>
 	            <p class="navbar-text pull-left">
