--- a/app/views/clinical_assignments/edit.html.erb
+++ b/app/views/clinical_assignments/edit.html.erb
@@ -12,9 +12,9 @@
     </caption>
 
 	<%= render(partial: 'form', locals: {f: f}) %>
-
+	<br>
 	<tr>
-		<td><%= submit_tag("Edit Assignment") %></td>
+		<td><%= submit_tag("Update Assignment") %></td>
 	</tr>
 
 	</table>
