--- a/app/views/clinical_assignments/new.html.erb
+++ b/app/views/clinical_assignments/new.html.erb
@@ -7,12 +7,12 @@
 	<table summary="clinical_assignments form fields">
 
     <caption>
-    	<span class="header1"> Create New Clinical Assignment</span>
+    	<span class="header1"> Add New Clinical Assignment</span>
 
     </caption>
 
 	<%= render(partial: 'form', locals: {f: f}) %>
-
+	<br>
 	<tr>
 		<td><%= submit_tag("Create Assignment") %></td>
 	</tr>
