--- a/app/views/clinical_sites/_form.html.erb
+++ b/app/views/clinical_sites/_form.html.erb
@@ -1,47 +1,47 @@
  
     <%= error_messages_for(@site) %>
     <tr>
-      <th> <%= f.label(:SiteName, "Site Name")%> </th>
+      <th> <%= f.label(:SiteName, "Site Name:")%> </th>
       <td> <%= f.text_field(:SiteName) %></td>
     </tr>
 
     <tr>
-      <th> <%= f.label(:City, "City")%> </th>
+      <th> <%= f.label(:City, "City:")%> </th>
       <td> <%= f.text_field(:City) %></td>
     </tr>
 
     <tr>
-      <th> <%= f.label(:County, "County")%> </th>
+      <th> <%= f.label(:County, "County:")%> </th>
       <td> <%= f.text_field(:County) %></td>
     </tr>
 
     <tr>
-      <th> <%= f.label(:Principal, "Principal")%> </th>
+      <th> <%= f.label(:Principal, "Principal:")%> </th>
       <td> <%= f.text_field(:Principal) %></td>
     </tr>
 
     <tr>
-      <th> <%= f.label(:District, "District")%> </th>
+      <th> <%= f.label(:District, "District:")%> </th>
       <td> <%= f.text_field(:District) %></td>
     </tr>
 
     <tr>
-      <th> <%= f.label(:phone, "Phone")%> </th>
+      <th> <%= f.label(:phone, "Phone:")%> </th>
       <td> <%= f.text_field(:phone) %> </td>
     </tr>
 
     <tr>
-      <th> <%= f.label(:receptionist, "Receptionist")%> </th>
+      <th> <%= f.label(:receptionist, "Receptionist:")%> </th>
       <td> <%= f.text_field(:receptionist) %> </td>
     </tr>
 
     <tr>
-      <th> <%= f.label(:website, "Website")%> </th>
+      <th> <%= f.label(:website, "Website:")%> </th>
       <td> <%= f.text_field(:website) %> </td>
     </tr>
 
     <tr>
-      <th> <%= f.label(:email, "Email")%> </th>
+      <th> <%= f.label(:email, "Email:")%> </th>
       <td> <%= f.text_field(:email) %> </td>
     </tr>
 
