--- a/app/views/clinical_sites/new.html.erb
+++ b/app/views/clinical_sites/new.html.erb
@@ -8,14 +8,14 @@
 	<table summary="clinical_site form fields">
 
     <caption>
-    	<span class="header1"> Create New Clinical Site</span>
+    	<span class="header1"> Add New Clinical Site</span>
 
     </caption>
 
 	<%= render(partial: 'form', locals: {f: f}) %>
-
+	<br>
 	<tr>
-		<td><%= submit_tag("Create Site") %></td>
+		<td><%= submit_tag("Add Site") %></td>
 	</tr>
 
 <% end %>
