--- a/app/views/clinical_teachers/new.html.erb
+++ b/app/views/clinical_teachers/new.html.erb
@@ -7,14 +7,14 @@
 	<table summary="clinical_teacher form fields">
 
     <caption>
-    	<span class="header1"> Create New Clinical Teacher</span>
+    	<span class="header1"> Add New Clinical Teacher</span>
 
     </caption>
 
 	<%= render(partial: 'form', locals: {f: f}) %>
-
+	<br>
 	<tr>
-		<td><%= submit_tag("Create Teacher") %></td>
+		<td><%= submit_tag("Add Teacher") %></td>
 	</tr>
 
 <% end %>
