--- a/app/views/praxis_results/new.html.erb
+++ b/app/views/praxis_results/new.html.erb
@@ -1,4 +1,4 @@
-<%= link_to student_praxis_results_path(students_path), class: "btn btn-default back-link glyphicon glyphicon-arrow-left" do %>
+<%= link_to access_index_path, class: "btn btn-default back-link glyphicon glyphicon-arrow-left" do %>
   <i class=" link-text"> Back</i>
 <% end %>
 
