--- a/app/views/prog_exits/edit.html.erb
+++ b/app/views/prog_exits/edit.html.erb
@@ -3,14 +3,14 @@
 	<table summary="prog_exit form fields" class="edit">
 
     <caption>
-    	<span class="header1"> Edit student exit</span>
+    	<span class="header1"> Edit Student Exit for</span>
     	<span class="header2"> <%=name_details(@exit.student, file_as=true)  %> </span>
     </caption>
 
 		<%= error_messages_for(@exit) %>
 
 		<tr>
-		  <th> Program </th>
+		  <th> Program: </th>
 		  <td>
 		  <%= @exit.program.EDSProgName %>
 		  </td>
@@ -18,7 +18,7 @@
 
 		<tr>
 			<th>
-				Exit Reason
+				Exit Reason:
 			</th>
 			<td>
 				<%= @exit.exit_code.ExitDiscrip %>
@@ -27,7 +27,7 @@
 
 		<tr>
 			<th>
-				Exit Date
+				Exit Date:
 			</th>
 			<td>
 				<%= @exit.ExitDate.strftime("%m/%d/%Y") %>
@@ -37,7 +37,7 @@
 
 		<tr>
 			<th>
-				<%= f.label :RecommendDate, "Date Recomend Certificaiton"  %>
+				<%= f.label :RecommendDate, "Date Recomend Certificaiton:"  %>
 			</th>
 
             <td class="date-admit">
@@ -52,7 +52,7 @@
 
 		<tr>
 			<th>
-				<%= f.label :Details %>
+				<%= f.label "Details:" %>
 			</th>
 
 			<td>
@@ -62,7 +62,7 @@
 		</tr>
 
 	<tr>
-		<td><%= submit_tag("Edit Exit") %></td>
+		<td><%= submit_tag("Update Exit") %></td>
 	</tr>
 
 <% end %>
