--- a/app/views/clinical_assignments/_form.html.erb
+++ b/app/views/clinical_assignments/_form.html.erb
@@ -1,13 +1,13 @@
  
     <%= error_messages_for(@assignment) %>
     <tr>
-      <th> <%= f.label(:student_id, "Student")%> </th>
+      <th> <%= f.label(:student_id, "Student:")%> </th>
       <td> <%= f.select(:student_id, @students.map {|s| [name_details(s), s.id]},
       {prompt: "Select a student"}) %></td>
     </tr>
 
     <tr>
-      <th> <%= f.label(:clinical_teacher_id, "Teacher")%> </th>
+      <th> <%= f.label(:clinical_teacher_id, "Teacher:")%> </th>
       <td> <%= f.select(:clinical_teacher_id, @teachers.map {|t| ["#{t.FirstName} #{t.LastName}", t.id]},
       {prompt: "Select a clinical teacher"}) %></td>
     </tr>
@@ -15,7 +15,7 @@
     <!-- TODO menu for course ID goes here -->
 
     <tr>
-    <th> <%= f.label(:StartDate, "Start Date") %></th>
+    <th> <%= f.label(:StartDate, "Start Date:") %></th>
 
     <td>    
       <%= render(partial: 'date_picker', :locals => {
@@ -28,7 +28,7 @@
 
 
     <tr>
-    <th> <%= f.label(:EndDate, "End Date") %></th>
+    <th> <%= f.label(:EndDate, "End Date:") %></th>
 
     <td>    
       <%= render(partial: 'date_picker', :locals => {
