started on populating course drop down in ajax

--- a/app/views/clinical_assignments/_form.html.erb
+++ b/app/views/clinical_assignments/_form.html.erb
@@ -1,9 +1,9 @@
- 
+
     <%= error_messages_for(@assignment) %>
     <tr>
       <th> <%= f.label(:student_id, "Student")%> </th>
       <td> <%= f.select(:student_id, @students.map {|s| [name_details(s), s.id]},
-      {prompt: "Select a student"}) %></td>
+      {prompt: "Select a student"}, id: 'course_select') %></td>
     </tr>
 
     <tr>
@@ -15,14 +15,21 @@
     <!-- TODO menu for course ID goes here -->
 
     <tr>
+      <th> <%= f.label(:transcript, "Course")%> </th>
+      <td> <%= f.select(:transcript, options_for_select([]), {}, {prompt: "Select a Course", id: 'course_select', :class => 'programs_row' },
+      ) %></td>
+    </tr>
+
+
+    <tr>
     <th> <%= f.label(:StartDate, "Start Date") %></th>
 
-    <td>    
+    <td>
       <%= render(partial: 'date_picker', :locals => {
                 f: f,
                 field: :StartDate,
                 default: current_term({:exact => false, :plan_b => :forward}).StartDate
-              } )%> 
+              } )%>
     </td>
     </tr>
 
@@ -30,14 +37,13 @@
     <tr>
     <th> <%= f.label(:EndDate, "End Date") %></th>
 
-    <td>    
+    <td>
       <%= render(partial: 'date_picker', :locals => {
                 f: f,
                 field: :EndDate,
                 default: current_term({:exact => false, :plan_b => :forward}).EndDate
-              } )%> 
+              } )%>
     </td>
     </tr>
 
   </table>
- 
