--- a/app/views/clinical_assignments/_form.html.erb
+++ b/app/views/clinical_assignments/_form.html.erb
@@ -1,9 +1,10 @@
 
     <%= error_messages_for(@assignment) %>
+
     <tr>
       <th> <%= f.label(:student_id, "Student")%> </th>
       <td> <%= f.select(:student_id, @students.map {|s| [name_details(s), s.id]},
-      {prompt: "Select a student"}, id: 'course_select') %></td>
+      {prompt: "Select a student"}, id: 'student_select') %></td>
     </tr>
 
     <tr>
@@ -15,8 +16,11 @@
     <!-- TODO menu for course ID goes here -->
 
     <tr>
-      <th> <%= f.label(:transcript, "Course")%> </th>
-      <td> <%= f.select(:transcript, options_for_select([]), {}, {prompt: "Select a Course", id: 'course_select', :class => 'programs_row' },
+      <th> <%= f.label(:transcript_id, "Course")%> </th>
+      <td> <%= f.select(:transcript_id,
+        options_for_select([ [ @assignment.transcript.andand.course_code, @assignment.transcript.andand.id ] ], @assignment.transcript.andand.id),
+        {},
+        {prompt: "Select a Course", id: 'course_select', :class => 'programs_row' }
       ) %></td>
     </tr>
 
