--- a/app/views/clinical_assignments/index.html.erb
+++ b/app/views/clinical_assignments/index.html.erb
@@ -11,16 +11,16 @@
 
   <% end %>
 
-  <div class="container-fluid">  
+  <div class="container-fluid">
     <table class="listing table table-striped" summary="clinical_assignments list">
           <div class="row">
-            <caption> 
-              <span class="header1 col-xs-12"><%= "Clinical Assignments: #{@term.PlainTerm}" %> </span><br>  
-              <span class="header2 col-xs-12"><%= @assignments.size %> found</span>  
+            <caption>
+              <span class="header1 col-xs-12"><%= "Clinical Assignments: #{@term.PlainTerm}" %> </span><br>
+              <span class="header2 col-xs-12"><%= @assignments.size %> found</span>
               <div class="col-xs-1">
-                <%= link_to new_clinical_assignment_path, :class => "btn btn-info glyphicon glyphicon-plus action-large" do %>  
+                <%= link_to new_clinical_assignment_path, :class => "btn btn-info glyphicon glyphicon-plus action-large" do %>
                     <span class="large-btn-text">New Assignment</span>
-                <% end %>         
+                <% end %>
               </div>
             </caption>
           </div>
@@ -35,29 +35,29 @@
         <% @assignments.each do |assignment| %>
           <td><%= name_details(assignment.student, file_as=true)%></td>
           <td><%= "#{assignment.clinical_teacher.FirstName} #{assignment.clinical_teacher.LastName}"  %></td>
-          <td><%= assignment.CourseID %></td>  <!-- needs to exist in Banner!-->
+          <td><%= assignment.transcript.andand.course_code %></td>  <!-- needs to exist in Banner!-->
           <td><%= assignment.Level %> </td>
           <td><%= assignment.StartDate.strftime("%m/%d/%Y") %></td>
           <td><%= assignment.EndDate.strftime("%m/%d/%Y") %></td>
           <td class="actions">
-  
+
           <!-- edit assignment-->
               <%= link_to edit_clinical_assignment_path(assignment.id), :class => "btn btn-info action-small" do %>
                     <span class="small-btn-text">Edit
                     </span>
                   <% end %>
-  
-  
+
+
             </td>
           <td>
-              <%= button_to(clinical_assignment_path(assignment.id), { class: "btn btn-default", method: :delete, 
+              <%= button_to(clinical_assignment_path(assignment.id), { class: "btn btn-default", method: :delete,
                   data: {confirm: "Are you sure you want to delete this application?"}} ) do %>
                  <span class="glyphicon glyphicon-trash" </span>
               <% end %>
-              
+
           </td>
           </tr>
-  
+
         <% end %>
       </table>
     </div>
