more work on help files
added help button to navbar
also removed logout button (let's no pretend that we actually handle authentication)

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -476,3 +476,8 @@ table > tr > td.issue_discrip {height: 100px;}
 #errorExplanation ul { margin-top: 0; }
 #errorExplanation ul li { list-style: square; }
 .spam { background-color: blue;}
+
+a.help-link, a.help-link:hover, a.help-link:focus{
+  background-color: white !important;
+  color: black !important;
+}
