Changed the layout of some of the buttons and some consistency in form pages

--- a/app/views/clinical_sites/new.html.erb
+++ b/app/views/clinical_sites/new.html.erb
@@ -14,8 +14,10 @@
 
 	<%= render(partial: 'form', locals: {f: f}) %>
 	<br>
+	<div class="col-sm-8 col-sm-offset-1">
 	<tr>
 		<td><%= submit_tag("Add Site") %></td>
 	</tr>
+	</div>
 
 <% end %>
