--- a/app/views/issues/new.html.erb
+++ b/app/views/issues/new.html.erb
@@ -2,27 +2,29 @@
   <i class=" link-text"> Back</i>
 <% end %>
 
-<div class="issue new">
+<div class="issue new" >
 
 
   <%= form_for(:issue, :url => student_issues_path(@student.AltID) ) do |f| %>
 	<h2>Open Advisor Note for <%=@student.name_readable%></h2>
     <%= render(partial: 'form', locals: {f: f}) %>
-
+  <div class="col-sm-8 col-sm-offset-3">
     <tr>
       <td>
           <%= submit_tag("Open Issue") %>
       </td>
     </tr><br>
-    <tr><br>
-      <div>
+  </div>
+    <div class="col-sm-8 col-sm-offset-2">
+    <tr><br><br>
         <%= fields_for :issue_update, @update do |update| %>
         <th><%= update.label(:status, "Status of Issue:") %></th>
         <td> <%= update.select(:status, IssueUpdate::STATUSES.keys,
         {prompt: "Select a status"}) %> </td>
         <% end %>
-      </div>
     </tr>
+    </div>
+
 
 
 
