--- a/app/views/clinical_teachers/edit.html.erb
+++ b/app/views/clinical_teachers/edit.html.erb
@@ -14,8 +14,10 @@
 
 	<%= render(partial: 'form', locals: {f: f}) %>
 	<br>
+	<div class="col-sm-8 col-sm-offset-1">
 	<tr>
-		<td><%= submit_tag("Edit Teacher") %></td>
+		<td><%= submit_tag("Update Teacher") %></td>
 	</tr>
+	</div>
 
 <% end %>
