--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,13 +43,11 @@
 	            </p>
 	          <% end -%>
       	<% end %>
-
       </div>
-
+      
       <div class="col-xs-12 col-md-3 col-md-offset-6">
         <p class="navbar-text pull-right">
           Welcome, <%= "#{session[:user]} (#{session[:role]})" %>
-
         </p>
       </div>
 
@@ -71,12 +69,8 @@
 
     <% end %>
 
-		<ul class="nav navbar-nav">
-			<li>
-				<a href="/help" aria-haspopup="true" aria-expanded="false" class="navbar-brand">Help</a>
-			</li>
+		<a href="/help" aria-haspopup="true" aria-expanded="true" class="navbar-brand">Help</a>
 
-		</ul>
   </div>
 </div>
 
