Formatting changes double check

--- a/app/views/clinical_teachers/_form.html.erb
+++ b/app/views/clinical_teachers/_form.html.erb
@@ -32,7 +32,7 @@
     </tr>
 
     <tr>
-      <th> <%= f.label(:begin_service, "Date beginning service")%> </th>
+      <th> <%= f.label(:begin_service, "Date beginning service:")%> </th>
 
     <td>
       <%= render(partial: 'date_picker', :locals => {
@@ -44,7 +44,7 @@
     </tr>
 
     <tr>
-      <th> <%= f.label(:epsb_training, "EPSB Training")%> </th>
+      <th> <%= f.label(:epsb_training, "EPSB Training:")%> </th>
     <td>
       <%= render(partial: 'date_picker', :locals => {
                 f: f,
@@ -55,7 +55,7 @@
     </tr>
 
     <tr>
-      <th> <%= f.label(:ct_record, "CT Record")%> </th>
+      <th> <%= f.label(:ct_record, "CT Record:")%> </th>
     <td>
       <%= render(partial: 'date_picker', :locals => {
                 f: f,
@@ -66,7 +66,7 @@
     </tr>
 
     <tr>
-      <th> <%= f.label(:co_teacher_training, "Co-teacher Training")%> </th>
+      <th> <%= f.label(:co_teacher_training, "Co-teacher Training:")%> </th>
     <td>
       <%= render(partial: 'date_picker', :locals => {
                 f: f,
