--- a/app/views/issue_updates/new.html.erb
+++ b/app/views/issue_updates/new.html.erb
@@ -33,15 +33,12 @@
     </tr>
 
   	<tr>
-	<th></th>
-	<td>
-    <div class="form-buttons">
-      <%= submit_tag("Submit Issue") %>
-
-
-	</td>
-	</tr>
-    </div>
+	    <td>
+        <div class="col-sm-8 col-sm-offset-8">
+          <%= submit_tag("Add Issue Update") %>
+        </div>
+	    </td>
+	  </tr>
 	</table>
 
 
