--- a/app/views/praxis_results/new.html.erb
+++ b/app/views/praxis_results/new.html.erb
@@ -10,7 +10,7 @@
 
       <table summary="Praxis form fields">
 
-        <caption>New Praxis Registration</caption>
+        <h2>New Praxis Registration</h2>
         <%= render(partial: 'form', locals: {f: f})  %>
       </table>
 
