--- a/app/views/praxis_results/show.html.erb
+++ b/app/views/praxis_results/show.html.erb
@@ -14,7 +14,7 @@
       </div>
 
       <div class="header2">
-        <%= "Praxis Results for #{@test.praxis_test.TestName} take on #{@test.test_date.to_s}"  %>
+        <%= "Praxis Results for #{@test.praxis_test.TestName}"  %>
       </div>
     </caption>
 
