--- a/app/views/clinical_assignments/_form.html.erb
+++ b/app/views/clinical_assignments/_form.html.erb
@@ -14,7 +14,7 @@
     </tr>
 
     <tr>
-      <th> <%= f.label(:transcript_id, "Course")%> </th>
+      <th> <%= f.label(:transcript_id, "Course:")%> </th>
       <td> <%= f.select(:transcript_id,
         options_for_select([ [ @assignment.transcript.andand.course_code, @assignment.transcript.andand.id ] ], @assignment.transcript.andand.id),
         {},
