--- a/app/views/pgps/show.html.erb
+++ b/app/views/pgps/show.html.erb
@@ -15,17 +15,17 @@
   </caption>
 
   <tr >
-    <th>Goal Description:</th>
+    <th>Goal Description</th>
     <td class="wrap"><%= @pgp.description %></td>
   </tr>
   
   <tr>
-    <th>Action Plan:</th>
+    <th>Action Plan</th>
     <td class="wrap"><%= @pgp.plan %></td>
   </tr>
   
   <tr>
-    <th>Strategies Including Timeline and Resources:</th>
+    <th>Strategies Including Timeline and Resources</th>
     <td class="wrap"><%= @pgp.strategies %></td>
   </tr>
 
