--- a/app/views/praxis_result_mailer/email_student.html.erb
+++ b/app/views/praxis_result_mailer/email_student.html.erb
@@ -1,22 +1,24 @@
 Dear <%= @stu.name_readable %>,
 <p>Your recent Praxis scores came back. Here is a summary of your results:<br>
-<%= if(@passing_tests.size > 0) %>
-<h2>Passing</h2>
-<ol>
-  <% @passing_tests.each do |exam| %>
-    <li> <%= exam.praxis_test.TestName %> </li>
-  <% end %>
-</ol>
+<% if @passing_tests.size > 0 %>
+  <h2>Passing</h2>
+  <ol>
+    <% @passing_tests.each do |exam| %>
+      <li> <%= exam.praxis_test.TestName %> </li>
+    <% end %>
+  </ol>
 <% end %>
 
-<%= @failing_tests.size > 0 %>
-<h2>Not Passing</h2>
+<% if @failing_tests.size > 0 %>
+  <h2>Not Passing</h2>
 
-<ol>
-  <% @failing_tests.each do |test| %>
-    <li><%= test.praxis_test.TestName %></li>
-  <% end %>
-</ol>
+  <ol>
+    <% @failing_tests.each do |test| %>
+      <li><%= test.praxis_test.TestName %></li>
+    <% end %>
+  </ol>
+<% end %>
+
 <% if @failing_tests.present? %>
   <p>If you would like to take any test again, please make an appointment with <%= mail_to("stoebelj@berea.edu", "Jacob Stoebel") %> to discuss your next steps. Also, the department may pay the fee for your retest. If you are interested you will need to write a letter to the department chair, <%= mail_to("mailto:cartery@berea.edu", "Dr. Carter") %>. Let her know why you believe you did not pass and how you plan to bring your score up. Successful letters will include a thoughtful, specific study plan to achieve a passing score. If you need help developing a study plan or writing this letter, contact your advisor. All decisions on funding are based on the chair's discretion and availability of funds.
   </p>
