add add view to for need_apply
also link and flow to apply specific student

--- a/app/views/adm_tep/new.html.erb
+++ b/app/views/adm_tep/new.html.erb
@@ -5,7 +5,7 @@
 
 <div class="issue new">
 
-  <%= form_for(:adm_tep, :url => adm_tep_index_path) do |f| %>
+  <%= form_for(@app, :url => adm_tep_index_path) do |f| %>
 
 	<table summary="adm_tep form fields">
 
@@ -36,7 +36,7 @@
 
 	</td>
 	</tr>
-    </div>	
+    </div>
 	</table>
 
 
