Fixed drop downs for students to reflect last name first

--- a/app/views/adm_tep/new.html.erb
+++ b/app/views/adm_tep/new.html.erb
@@ -13,17 +13,17 @@
 	    <%= error_messages_for(@app) %>
 
     <tr>
-      <th> <%= f.label(:BannerTerm_BannerTerm, "Term Applying")%> </th>
+      <th> <%= f.label(:BannerTerm_BannerTerm, "Term Applying:")%> </th>
       <td> <%= f.select(:BannerTerm_BannerTerm, @terms.map {|t| [t.readable, t.id]}, {:prompt => 'Select a term to apply'}) %></td>
     </tr>
 
     <tr>
-      <th> <%= f.label(:student_id, "Name")%> </th>
+      <th> <%= f.label(:student_id, "Name:")%> </th>
       <td> <%= f.select(:student_id, @students.map {|s| [name_details(s, file_as=true), s.id]}, {:prompt => 'Select a name'}) %></td>
     </tr>
 
     <tr>
-      <th> <%= f.label(:Program_ProgCode, "Program")%> </th>
+      <th> <%= f.label(:Program_ProgCode, "Program:")%> </th>
       <td> <%= f.select(:Program_ProgCode, @programs.map {|p| [p.EDSProgName, p.id]}, {:prompt => 'Select a Program'}) %></td>
     </tr>
 
