--- a/app/views/adm_st/new.html.erb
+++ b/app/views/adm_st/new.html.erb
@@ -16,12 +16,12 @@
 	    <%= error_messages_for(@app) %>
 
     <tr>
-      <th> <%= f.label(:student_id, "Name")%> </th>
+      <th> <%= f.label(:student_id, "Name:")%> </th>
       <td> <%= f.select(:student_id, @students.map {|s| [name_details(s, file_as=true), s.id]}, {:prompt => 'Select a name'}) %></td>
     </tr>
 
     <tr>
-      <th> <%= f.label(:BannerTerm_BannerTerm, "Term")%> </th>
+      <th> <%= f.label(:BannerTerm_BannerTerm, "Term:")%> </th>
       <td> <%= f.select(:BannerTerm_BannerTerm, @terms.map {|t| [t.readable, t.id]}, {:prompt => 'Select a term to apply'}) %></td>
     </tr>
 
