Fixed formatting on Help and added it to each of the nav bar forms instead of in layout

--- a/app/views/application/_admin_navbar.html.erb
+++ b/app/views/application/_admin_navbar.html.erb
@@ -35,4 +35,7 @@
     </ul>
   </li>
 
+  <li class="dropdown active">
+		<a href="/help" aria-haspopup="true" aria-expanded="false" >Help</a>
+	</li>
 </ul>
