--- a/app/views/application/_stu_labor_navbar.html.erb
+++ b/app/views/application/_stu_labor_navbar.html.erb
@@ -21,6 +21,9 @@
           <li> <%= link_to("Praxis Result Resolution", praxis_result_temps_path) %> </li>
         </ul>
       </li>
+      <li class="dropdown active">
+			  <a href="/help" aria-haspopup="true" aria-expanded="false" >Help</a>
+		  </li>
     </ul>
 
   </div>
