--- a/app/views/application/_advisor_navbar.html.erb
+++ b/app/views/application/_advisor_navbar.html.erb
@@ -21,6 +21,11 @@
           <li> <%= link_to("All Open Issues", issues_path) %> </li>
         </ul>
       </li>
+      <li class="dropdown active">
+			  <a href="/help" aria-haspopup="true" aria-expanded="false" >Help</a>
+		  </li>
     </ul>
+    
+
 
   </div>
