--- a/app/views/application/_staff_navbar.html.erb
+++ b/app/views/application/_staff_navbar.html.erb
@@ -34,6 +34,9 @@
         </ul>
       </li>
 
+      <li class="dropdown active">
+			  <a href="/help" aria-haspopup="true" aria-expanded="false" >Help</a>
+		  </li>
     </ul>
 
   </div>
