--- a/app/views/adm_tep/index.html.erb
+++ b/app/views/adm_tep/index.html.erb
@@ -107,6 +107,23 @@
           <%= link_to("Details", adm_tep_path(app.id), :class => "action details btn btn-info action-small issues")%>
         </td>
 
+        <% if app.adm_files.present?  -%>
+            <td>
+                <%= render(partial: "links_popover", :locals => {
+                    :record_id => app.id,
+                    :popover_title => "Application Documents for #{app.student.name_readable}",
+                    :button_title => "Docs",
+                    :links => (app.adm_files.map{|f| {
+                        :name => f.student_file.doc_file_name,
+                        :url => adm_file_download_path(f.id)
+                    }
+                    })
+
+                    }) %>
+            </td>
+
+        <% end %>
+
         <td>
 
           <%= button_to(adm_tep_path(app.id), { class: "btn btn-default #{app.TEPAdmit==nil ? "" : "disabled" }",
@@ -120,15 +137,6 @@
 
         </td>
 
-        <% if app.student_file  %>
-
-        <td class="doc-download">
-
-              <%= link_to adm_tep_download_path(app.id), :class => "btn btn-default glyphicon glyphicon-paperclip action-small" do %>
-              <% end %>
-        </td>
-
-        <% end %>
 
         </tr>
           <!-- end of if statement for content-->
